alignment fix

--- a/src/components/css/main/index.module.css
+++ b/src/components/css/main/index.module.css
@@ -34,8 +34,8 @@
     flex-grow: 1;
     flex-shrink: 1;
     margin: 0 auto;
-    background: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(3px);
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(8px);
     box-sizing: border-box;
     margin-top: 32px;
     padding: 32px 48px;
@@ -49,6 +49,7 @@
 @media screen and (min-width: 1200px) {
     .content {
         padding: 64px 96px;
+        border-radius: 8px;
     }
 
     .responsiveDoubleCol {
